# qms-monitor

./: .env.example  .gitignore  README.md  config.xlsx  config.xlsx.example  export_csv_cache.py  main.py  pyproject.toml
qms_monitor/: app.py  cli.py  config_loader.py  constants.py  csv_cache_exporter.py  csv_io.py  excel_reader.py  ledger_reader.py  llm_client.py  models.py  overdue_excel_exporter.py  parsers.py  pdf_exporter.py  pdf_exporter_latex.py  report_renderer.py  stats.py
qms_monitor/resources/: pandoc_header.tex  pandoc_table_widths.lua  pandoc_toc_pagebreak.tex
vba/: README.md  qms_local_stats.bas
