[project]
name = "qms-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdown>=3.10.1",
    "openai>=1.0.0",
    "pywin32; platform_system == 'Windows'",
    "reportlab>=4.4.9",
]
